--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.css" />
 		<title>Carousel JS</title>
 	</head>
 	<body>
@@ -41,7 +41,7 @@
 		</div>
 		<br />
 
-		<div style="text-align: center">
+		<div style="text-align: center" class="dots">
 			<span class="dot" onclick="currentSlide(1)"></span>
 			<span class="dot" onclick="currentSlide(2)"></span>
 			<span class="dot" onclick="currentSlide(3)"></span>
@@ -50,5 +50,6 @@
 			src="https://kit.fontawesome.com/5e62d29057.js"
 			crossorigin="anonymous"
 		></script>
+		<script src="./app.js"></script>
 	</body>
 </html>
