--- a/index.html
+++ b/index.html
@@ -8,44 +8,9 @@
 		<title>Carousel JS</title>
 	</head>
 	<body>
-		<div class="slideshow-container">
-			<div class="mySlides fade">
-				<img
-					src="https://images.pexels.com/photos/4101555/pexels-photo-4101555.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-					alt=""
-					width="100%"
-				/>
-				<div class="text">Caption Text</div>
-			</div>
-
-			<div class="mySlides fade">
-				<img
-					src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-					alt=""
-					width="100%"
-				/>
-				<div class="text">Caption Two</div>
-			</div>
-
-			<div class="mySlides fade">
-				<img
-					src="https://images.pexels.com/photos/3293148/pexels-photo-3293148.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-					alt=""
-					width="100%"
-				/>
-				<div class="text">Caption Three</div>
-			</div>
-
-			<a class="prev fas fa-arrow-left" onclick="plusSlides(-1)"></a>
-			<a class="next fas fa-arrow-right" onclick="plusSlides(1)"></a>
-		</div>
+		<div class="slideshow-container"></div>
 		<br />
-
-		<div style="text-align: center" class="dots">
-			<span class="dot" onclick="currentSlide(1)"></span>
-			<span class="dot" onclick="currentSlide(2)"></span>
-			<span class="dot" onclick="currentSlide(3)"></span>
-		</div>
+		<div class="dots"></div>
 		<script
 			src="https://kit.fontawesome.com/5e62d29057.js"
 			crossorigin="anonymous"
