--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 			href="./images/favicon.ico"
 			type="image/x-icon"
 		/>
+		<meta
+			name="description"
+			content="A simple carousel built by Vanilla JS"
+		/>
 		<link rel="stylesheet" href="style.css" />
 		<title>Carousel JS</title>
 	</head>
